[workspace]
members = [
    # Tasks
    "add",
    "comm",
    "perc",
    "ini",
    "tar",
    "polka",
    "trust",
    "flatmap",
    "jsondb",
    "mpsc",
    "itertools",
    "fswalk",
    "stdmacro",
    "gc",
    "orm",
    "threadpool",
    "tcp_proxy",
    "rio",
    "babencoin",
    "crawler",
    "arrayvec",
    "snapshot",

    # Tools
    "tools/submit",
]
