[package]
name = "babencoin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
byteorder = "1.4.3"
chrono = "0.4.23"
futures = "0.3.25"
humantime-serde = "1.1.1"
log = "0.4.17"
num-bigint = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"
rsa = "0.4"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
sha3 = "0.10.6"
stderrlog = "0.5.4"
structopt = "0.3.26"
tokio = { version = "1.22.0", features = ["sync", "rt", "rt-multi-thread", "macros", "io-util", "net", "time"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json", "tracing-log"] }
tracing-tree = "0.2.2"

[dev-dependencies]
tempfile = "3.3.0"
rand = "0.8.5"
