[package]
name = "chat"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3"
prost = "0.9"
rand = "0.8"
subtle = "2.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.6"
structopt = "0.3"

[build-dependencies]
tonic-build = "0.6"

[dev-dependencies]
pretty_assertions = "0.7"

[[bin]]
name = "server"
path = "src/server/main.rs"
